- Valley.getElevationLeftOfHeadwall does lookup and interpolation

MIGRATE TO PHETCOMMON:
- DoubleSpinner
- SliderOnlyLayoutStrategy
- HorizontalLayoutStrategy

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- remove unused images


DONE:
9/16/08 - set a fixed range for x-axis in "glacial budget vs elevation" chart
9/16/08 - fix: resizing window so that zoomed viewport size is zero fails assertion in GlaciersPlayArea.updateZoomedViewportBounds (assertion unnecessary)
9/16/08 - fix: resizing window very narrow fails assertion in DistanceAxisNode.setRange
9/16/08 - add ability to set minHeight of control panel via strings file, so that control panels in all modules will be same height
9/16/08 - fix layout problems with main control panel (bogus calls to BorderLayout)
9/16/08 - change "equilibrium" to "steady state" in MiscControlPanel so that terminology is consistent
******* 1.00.04 (24458)
9/15/08 - put default units on top in thermometer
9/15/08 - refactor ClimateControlPanel for English/metric feature
9/15/08 - switch climate controls between English & metric units
******* 1.00.03 (24300)
9/9/08 - completed: switch tools between English & metric units
9/9/08 - add support for changing units on tools that user has already dragged out of the toolbox
9/9/08 - add immutable support for units to tools (glacial budget meter, ice thickness tool, gps)
9/9/08 - bugfix: glacial budget meter should use meter/yr for all values
9/9/08 - convert existing data in time-based charts when switching units
9/9/08 - switch charts between English & metric units, any existing charts are closed and time-based data is lost
9/9/08 - change string keys for chart axes to accommodate switching between English and metric
9/9/08 - completed: switch coordinates view between English & metric units