@@ -73,7 +73,9 @@ comboBox.when.now=now
 comboBox.when.nearFuture=50 years
 comboBox.when.distantFuture=in 10,000 years
 
-help.equilibriumButton=<html>immediately sets the glacier<br>to its steady state</html>
+help.steadyStateButton=<html>immediately sets the glacier<br>to its steady state</html>
+help.simSpeed=<html>increases the simulation speed<br>for faster response</html>
+help.toolbox=<html>Drag tools in and out of the toolbox</html>
 
 label.accumulation=accumulation
 label.ablation=ablation
