@@ -38,7 +38,9 @@ public class GlaciersStrings {
     public static final String CHECK_BOX_GLACIER_PICTURE = GlaciersResources.getString( "checkBox.glacierPicture" );
     public static final String CHECK_BOX_SNOWFALL = GlaciersResources.getString( "checkBox.snowfall" );
     
-    public static final String HELP_EQUILIBRIUM_BUTTON = GlaciersResources.getString( "help.equilibriumButton" );
+    public static final String HELP_STEADY_STATE_BUTTON = GlaciersResources.getString( "help.steadyStateButton" );
+    public static final String HELP_SIM_SPEED = GlaciersResources.getString( "help.simSpeed" );
+    public static final String HELP_TOOLBOX = GlaciersResources.getString( "help.toolbox" );
     
     public static final String LABEL_ACCUMULATION = GlaciersResources.getString( "label.accumulation" );
     public static final String LABEL_ABLATION = GlaciersResources.getString( "label.ablation" );
